# advent-of-code

./: .clang-format  .gitignore  README.md  meson.build
src/day-1/: core.cpp  core.hpp  run.cpp
src/day-1/tests/: distance.cpp  similarity.cpp
